Fixed layout issue in mentors section

--- a/index.css
+++ b/index.css
@@ -93,6 +93,7 @@ img {
   padding: 0 20px;
   position: relative;
   z-index: 1;
+  margin: 0 auto;
 }
 
 .overlay-bg-color {
@@ -165,6 +166,7 @@ img {
 .aral {
   width: 155px;
   height: 65px;
+  padding-left: 20px;
 }
 
 .menu {
@@ -1172,49 +1174,138 @@ img {
 }
 
 #mentors {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(0, 1fr));
+  padding-bottom: 80px;
   position: relative;
   border-top: 1px solid #000;
-  min-height: 2000px;
+}
+
+.decor__line {
+  position: absolute;
+  left: 50%;
 }
 
 .mentor-header {
-  grid-column: 1/3;
-  height: 250px;
-  border-right: 1px solid rgba(0, 0, 0, 0.5);
-}
-
-.mentor-header-box {
-  height: 218px;
-  border-bottom: 1px solid #000;
-  width: 100%;
-}
-
-.mentor-header-box p {
+  width: calc(50% - 10px);
   font-size: 72px;
-  line-height: 100%;
-  padding: 25px 81px 0 51px;
-}
-
-.mentor-line {
-  grid-column: 3/4;
-  position: absolute;
-  top: 0;
-  left: 0;
-  pointer-events: none;
-  z-index: 0;
-}
-
-.field {
-  font-size: 44px;
+  font-style: normal;
+  font-weight: 420;
+  line-height: normal;
+  padding: 25px 21px 100px 50px;
+  position: relative;
+  margin-bottom: 60px;
   font-family: "SeasonMix-Regular";
-  line-height: 100%;
 }
 
-#img-small {
-  transform: scale(1);
+.mentor-header::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  background-color: #000;
+  height: 1px;
+  width: calc(100% + 30px);
+  left: -20px;
+}
+
+.mentors_category {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+
+.category_item {
+  font-size: 44px;
+  font-style: normal;
+  font-weight: 420;
+  line-height: normal;
+  margin-bottom: 60px;
+  padding-left: 60px;
+  flex: 0 0 auto;
+  width: calc(50% - 10px);
+  font-family: "SeasonMix-Regular";
+}
+
+.mentors_grid {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 60px 0;
+}
+
+.mentors_item {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  flex: 0 0 auto;
+  width: calc(50% - 10px);
+}
+
+.mentors_photo {
+  flex: 0 0 auto;
+  width: calc(50% - 5px);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.image {
+  position: relative;
+  width: 336px;
+  height: 336px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0 auto;
+}
+
+.image::before {
+  content: "";
+  width: 336px;
+  height: 336px;
+  position: absolute;
+  pointer-events: none;
+  z-index: -1;
+  background-image: url(./svg/profile-line-box.svg);
+}
+
+.image img {
+  width: 292px;
+  height: 292px;
+  object-fit: cover;
   object-position: top;
+  border-radius: 50%;
+}
+
+.name {
+  font-size: 38px;
+  font-family: "SeasonMix-Regular";
+  font-style: normal;
+  font-weight: 420;
+  line-height: 44px;
+  margin: 20px auto 0;
+  text-align: left;
+  width: 336px;
+}
+
+.mentors_content {
+  flex: 0 0 auto;
+  width: calc(50% - 10px);
+  padding: 0 10px;
+}
+
+.mentors_content p:not(:last-child) {
+  margin-bottom: 24px;
+}
+
+.mentors_content p {
+  font-size: 16px;
+  line-height: 24px;
+  font-style: normal;
+  font-weight: 550;
+  font-family: "SeasonSansTRIAL-Medium";
 }
 
 .margin-top {
